2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the massive deletion of
	modules when only delete one module, the old code deleted all
	modules in the agents on operation.
	
	MERGED FROM THE TRUNK

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/functions.ajax.php: Added proxy
	 support and bsdtar support.

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Keep original
	 connection params when xmlrpc_client->sendPayloadHTTP10() follows
	 30x redirect.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php: added lost constant for the 10 minutes.
	
	* include/functions_users.php: fixed the first execution of
	chatlog that throw PHP notice.
	
	* include/functions_config.php: fixed PHP notices when the "homeurl"
	is empty in some installations.

2013-03-11  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Added HTTP redirect
	 support. It fixes an issue that update manager behind http proxy
	 failed to communicate with update server due to the server's 
	 "301 Moved Permanently" HTTP response.

2013-03-11  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Increase the size of the stat_win
	graphs pop-up to avoid miss the reload button in explorer browsers
	for bug 3606507

2013-03-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Fixed reporting_get_group_stats.
	  Froze consoles with lots of data and some calculations were wrong.

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed the apply format to
	numeric value in the max item report.

2013-03-06  Dario Rodriguez <dario@artica.es>

	* operation/agentes/ver_agente.php: Adapted view to support
	new vmware extensions.
